--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ufront-hello",
-  "version": "0.0.1",
-  "description": "A Hello-World example for Ufront on NodeJS built on top of Express",
+  "version": "0.0.1.1",
+  "description": "A Hello-World example for Ufront on NodeJS built on top of Express.",
   "main": "www/server.js",
   "scripts": {
     "test": "www/test.js"
@@ -11,7 +11,7 @@
     "url": "https://github.com/ufront/hello"
   },
   "author": "Jason O'Neil <jason.oneil@gmail.com>",
-  "license": "Public",
+  "license": "Not Public",
   "dependencies": {
     "body-parser": "^1.13.1",
     "express": "^4.12.2"
